Commit for ASM4 - Handle  button. Extra for ExpenseFilter.js: Filter by Title input

--- a/src/components/Expenses/ExpensesFilter.css
+++ b/src/components/Expenses/ExpensesFilter.css
@@ -19,11 +19,14 @@
 .expenses-filter label {
     font-weight: bold;
     margin-bottom: 0.5rem;
+    font-size: 2em;
 }
 
-.expenses-filter select {
+.expenses-filter select, .expenses-filter input {
     font: inherit;
-    padding: 0.5rem 3rem;
-    font-weight: bold;
+    padding: 0.5rem;
     border-radius: 6px;
+    border: 1px solid #ccc;
+    width: 20rem;
+    max-width: 100%;
 }
