--- a/src/components/Expenses/Expenses.css
+++ b/src/components/Expenses/Expenses.css
@@ -1,7 +1,15 @@
 .expenses {
-    padding: 1rem;
-    background-color: rgb(31, 31, 31);
-    margin: 2rem auto;
-    width: 50rem;
-    max-width: 95%;
-  }
+  padding: 1rem;
+  background-color: rgb(31, 31, 31);
+  margin: 2rem auto;
+  width: 50rem;
+  max-width: 95%;
+}
+.no-expenses-filtered {
+  color: #3a3a3a;
+  font-size: 1rem;
+  flex: 1;
+  margin: 0 1rem;
+  color: white;
+  text-align: left;
+}
